# ibis-vega-transform

./: .authors.yml  .gitignore  .mailmap  AUTHORS.md  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  install.json  jaeger_entrypoint.py  mypy.ini  out.tgz  package-lock.json  package.json  pyproject.toml  rever.xsh  setup.cfg  setup.py  tsconfig.json  tsconfig.test.json
.github/workflows/: binder.yml  build.yml  test.yml
binder/: environment.yml  postBuild
config/jest/: jest-environment.js  jest-puppeteer.config.js  jest.config.js
examples/: BasicIbisPandasExample.ipynb  Charting Example.ipynb  Geocharts.ipynb  Ibis + Altair + Extraction.ipynb  Omnsci Vega Example.ipynb  Performance.ipynb  Talk.ipynb  basic-example-ibis-pandas.ipynb  charting-example.ipynb  ibis-altair-extraction.ipynb  interactive-slider.ipynb  omnisci-vega-example.ipynb  performance-charts.ipynb  vega-compiler.ipynb
examples/Talk/: Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  final.v.json  initial.vl.json
ibis_vega_transform/: __init__.py  _version.py  altair.py  altair_data_transformer.py  altair_monkeypatch.py  altair_renderer.py  compiler.py  core.py  globals.py  query.py  tracer.py  tracing.py  tracing_server.py  util.py  vegaexpr.py
ibis_vega_transform/transforms/: __init__.py  aggregate.py  bin.py  collect.py  filter.py  formula.py  timeunit.py
jupyter-config/: ibis_vega_transform.json
src/: compiler.ts  handler.ts  index.ts  renderer.ts  tracing.ts  transform.ts  transformextract.ts  vega-dataflow.d.ts
talks/: 2020 OmniSci Con Talk.md
test/ui/: test.ts
(+1 files in other folders)
